# ccusage

./: README.md  pyproject.toml  statusline.py
src/ccusage/: __init__.py  __main__.py
tests/: test_ccusage.py
