[project]
name = "ccusage"
version = "0.1.6"
description = "Claude Code usage monitor — fetches rate limits from Anthropic's API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wakamex/ccusage"
Source = "https://github.com/wakamex/ccusage"

[project.scripts]
ccusage = "ccusage:main"
